Use yum to allow epel7 builds

--- a/.copr/Makefile
+++ b/.copr/Makefile
@@ -1,5 +1,5 @@
 srpm:
-	dnf -y install wget rpkg
+	yum -y install wget rpkg
 	wget https://github.com/DanielAdolfsson/ndppd/archive/master.tar.gz
 	rpkg srpm
 	mv *.src.rpm "$(outdir)"
